correction to example3

--- a/misc/accentdisplay/example3.html
+++ b/misc/accentdisplay/example3.html
@@ -4,12 +4,12 @@
 <title>example3</title>
 <meta charset="UTF-8">
 <style>
-html {font-size:16px};
+html {font-size:16px;}
 @font-face { 
  src: url(fonts/siddhanta.ttf); /* relative to this css file */
  font-family: siddhanta_deva;
 }
-.siddhanta {color: teal; font-family:siddhanta_deva;;
+.siddhanta {color: teal; font-family:siddhanta_deva;
  font-size:1rem;
 line-height: 1.5;  /* times font-size;*/
 }
